<resources>
    <string name="app_name">Empty SLOT</string>
    <string name="version_no">1.0.0. beta</string>
    <string name="start_caption">A Project by Team Dominators, NIBM</string>
    <string name="welcome_login">Welcome to</string>
    <string name="login_caption">Sign in | Register</string>
    <string name="login_caption_2">Register ot Login to your Account</string>

    <string name="login_phone_no">Enter Mobile Number</string>
    <string name="login_password">Enter Password</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_login">Sign in</string>
    <string name="login_new_user">New user ?</string>
    <string name="login_register_here">Sign up to Empty SLOT</string>

    <string name="reset_password_caption_heading">Did you forget your password ?</string>
    <string name="reset_password_caption_1">That\'s OK..</string>
    <string name="reset_password_caption_2">Just enter the E-mail address you\'ve used to register with us and we\'ll send you the reset instructions.</string>
    <string name="reset_password_email">Email Address</string>
    <string name="reset_password_submit">Submit</string>

    <string name="sign_up_caption_head">Join Empty SLOT</string>
    <string name="sign_up_caption_2">Get on Board</string>
    <string name="sign_up_sign_up">Sign Up</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_email">Email Address</string>
    <string name="sign_up_phone">Mobile No</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up_policy_caption1">By creating an account, you agreed to the,</string>
    <string name="sign_up_policy_caption2"> <u>Terms of use and Privacy Policy</u> </string>
    <string name="sign_up_already_member">I\'m already a member</string>
    <string name="sign_up_vehicle_types">Select Vehicle types you usually drive</string>
    <string name="title_activity_main_map_view">Map</string>

    <string name="account_settings">Account Settings</string>
    <string name="account_settings_app_name">Empty SLOT</string>
    <string name="account_settings_app_caption">Pushing Beyond Limits</string>
    <string name="account_settings_account">Account</string>
    <string name="account_settings_change">Change</string>
    <string name="account_settings_change_name">Change Name</string>
    <string name="account_settings_change_email">Change Email</string>
    <string name="account_settings_change_password">Change Password</string>
    <string name="account_settings_add_vehicles">Add new Vehicles</string>
    <string name="account_settings_add_vehicles_add">Add Vehicle</string>
    <string name="account_settings_general">General</string>
    <string name="account_settings_help_support">Help and Support</string>
    <string name="account_settings_provide_feedback">Provide Feedback</string>
    <string name="account_settings_terms_and_conditions">Terms and Conditions</string>
    <string name="account_settings_privacy_policy">Privacy Policy</string>
    <string name="account_settings_app_version">App Version</string>
    <string name="account_settings_logout">Logout</string>

    <string name="change_info_confirm">Confirm</string>
    <string name="change_name_title">Change Username</string>
    <string name="change_name">Enter Name</string>
    <string name="change_email_title">Change E-mail Address</string>
    <string name="change_email">Enter Email Address</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_password">Enter new Password</string>
    <string name="change_confirm_password">Confirm Password</string>

    <string name="intro_own_parking_heading">Own Parking Spaces</string>
    <string name="intro_own_parking_caption_1">Add your parking to Empty SLOT</string>
    <string name="intro_own_parking_sub_caption_1">Register with Empty SLOT and provide us the information that, where your parking lot is located</string>
    <string name="intro_own_parking_sub_caption_2">Earn money while notifying Empty SLOT users, about your parking lot.</string>
    <string name="intro_own_parking_caption_2">Earn more money.</string>
    <string name="intro_own_parking_got_it">Got it</string>

    <string name="own_parkings_title_1">Own Parking Spaces</string>
    <string name="own_parkings_title_2">Add Parking</string>
    <string name="own_parkings_your_name">Your Name</string>
    <string name="own_parkings_your_contact_no">Your Contact No</string>
    <string name="own_parkings_your_location">Your Address / Landmarks</string>
    <string name="own_parkings_no_of_spaces">Number of Parking Spaces</string>
    <string name="own_parkings_rates">Enter Rates per Hour</string>
    <string name="own_parkings_select_location">Select Location of Parking Space</string>
    <string name="own_parkings_request_hw_sensors">Required H/W Sensors</string>
    <string name="own_parkings_what_is_hw"> <u>What are Hardware Sensors</u> </string>
    <string name="own_parkings_select_images"> Select Images of the Parking Space </string>
    <string name="own_parkings_place_request">Place Request</string>

    <string name="add_public_parking_title_1">Contribute to Public</string>
    <string name="add_public_parking_title_2">Add Public Parking</string>
    <string name="add_public_parking_parking_name">Name of the Parking</string>
    <string name="add_public_parking_landmarks">Landmarks of the Parking</string>
    <string name="add_public_parking_estimated_spaces">No of available spaces</string>
    <string name="add_public_parking_special_notes">Special notes</string>
    <string name="add_public_parking_select_location">Select location of the parking</string>
    <string name="add_public_parking_temporary_parking">Temporary Parking Space</string>
    <string name="add_public_parking_what_is_temporary_parking"><u>Temporary parking spaces?</u></string>
    <string name="add_public_parking_image">Select Images of the Parking Space</string>
    <string name="add_public_parking_add_parking">Add Parking</string>

    <string name="add_vehicles_heading_1">My Vehicles</string>
    <string name="add_vehicles_heading_2">Manage my Vehicles</string>
    <string name="add_vehicles_select_category">Select Vehicle Category</string>
    <string name="add_vehicles_vehicle_reg_no">Registration No</string>
    <string name="add_vehicles_vehicle_model">Vehicle Model</string>
    <string name="add_vehicles_add_vehicle">Add Vehicle</string>
    <string name="add_vehicles_my_vehicles">My Vehicles</string>

    <string name="booking_private_heading1">Place Booking</string>

    <string name="view_active_bookings_heading">Active Bookings</string>
    <string name="view_expired_bookings_heading">Expired Bookings</string>


    <string name="loading">Loading..</string>
    <string name="title_activity_my_bookings">activity_my_bookings</string>

    <string name="title_active_bookings">Active Bookings</string>
    <string name="title_inactive_bookings">Inactive Bookings</string>

    <string name="title_activity_location_picker">Location Picker</string>

</resources>
