<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21254A"
    tools:context=".activity_add_vehicles">

    <ImageView
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/header_gradient_wave_center" />

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/view_top"
        android:layout_alignBottom="@id/view_top"
        android:gravity="center">

        <TextView
            android:id="@+id/view_caption_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_vehicles_heading_1"
            android:textColor="@color/sign_up_edit_texts_tint_text_headings"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_caption_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_caption_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/add_vehicles_heading_2"
            android:textColor="@color/sign_up_edit_texts_tint_text_headings"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_top"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_vehicle_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_vehicles_select_category"
            android:textColor="@color/sign_up_edit_texts_tint_text_headings" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rclr_vehicles"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/view_vehicle_cat"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/txtRegNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rclr_vehicles"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/sign_up_edit_texts_hint"
            android:hint="@string/add_vehicles_vehicle_reg_no"
            android:inputType="text"
            android:textColor="@color/sign_up_edit_texts_tint_text_headings"
            android:textColorHint="@color/sign_up_edit_texts_tint_text_headings" />

        <EditText
            android:id="@+id/txtVehModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtRegNo"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/sign_up_edit_texts_hint"
            android:hint="@string/add_vehicles_vehicle_model"
            android:inputType="text"
            android:textColor="@color/sign_up_edit_texts_tint_text_headings"
            android:textColorHint="@color/sign_up_edit_texts_tint_text_headings" />


        <Button
            android:id="@+id/btnAddVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtVehModel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/sign_up_button_round"
            android:text="@string/add_vehicles_add_vehicle"
            android:textAllCaps="false"
            android:textColor="@color/sign_up_edit_texts_tint_text_headings"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_my_vehicles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/add_vehicles_my_vehicles"
            android:textColor="@color/sign_up_edit_texts_tint_text_headings"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rclr_myVehicles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/view_my_vehicles"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />


    </RelativeLayout>

</RelativeLayout>