<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_four"
    tools:context=".activity_intro_own_parking">

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/view_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_own_parking_heading"
            android:textColor="@color/sign_up_edit_texts_tint_text_headings"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/view_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_top"
            android:layout_marginTop="8dp"
            android:text="@string/intro_own_parking_caption_1"
            android:textColor="@color/sign_up_edit_texts_tint_text_headings"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/view_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_center"
            android:layout_marginTop="8dp"
            android:text="@string/intro_own_parking_caption_2"
            android:textColor="@color/sign_up_edit_texts_tint_text_headings"
            android:textSize="14sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnGotIt"
        android:layout_below="@id/layout_top"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView1"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerInside"
                app:lottie_autoPlay="true"
                app:lottie_fileName="money_2.json"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/animationView1"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/intro_own_parking_sub_caption_1"
                android:textColor="@color/sign_up_edit_texts_tint_text_headings" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView2"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_below="@id/animationView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:scaleType="centerInside"
                app:lottie_autoPlay="true"
                app:lottie_fileName="money_1.json"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/animationView2"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/intro_own_parking_sub_caption_2"
                android:textColor="@color/sign_up_edit_texts_tint_text_headings" />


        </RelativeLayout>
    </ScrollView>


    <Button
        android:id="@+id/btnGotIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:text="@string/intro_own_parking_got_it"
        android:textColor="@color/sign_up_edit_texts_tint_text_headings"
        android:textSize="18sp" />


</RelativeLayout>